# backend

./: .env  Cargo.toml
src/: auth.rs  email.rs  main.rs  products.rs
