[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-web-httpauth = "0.7"  # For BearerAuth
jsonwebtoken = "8"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10"
mime = "0.3"
lazy_static = "1.4"  # For mock user database
bcrypt = "0.13"
lettre = { version = "0.11", features = ["smtp-transport", "tokio1-native-tls"] }
lettre_email = "0.9.4"
tokio = { version = "1.0", features = ["full"] }
reqwest = "0.12.15"
actix-cors = "0.6.0"
